[package]
name = "wepcrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ctrlc = "3.4.1"
hex = "0.4.3"
libc = "0.2.150"
netlink-packet-core = { version = "0.7.0", default-features = false }
netlink-packet-generic = "0.3.3"
netlink-packet-route = "0.18.1"
netlink-packet-utils = "0.5.2"
netlink-sys = { version = "0.8.5", default-features = false }
num_enum = "0.7.1"
radiotap = "1.3.0"
rand = "0.8.5"
ratatui = "0.24.0"
socket2 = "0.5.5"
